[project]
name = "underdad"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Ernest",email = "anernest@usa.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
